TEST_PROGRAMS/INVALID/invalidfunctionkeyword.go
import "fmt"
function main() {
        fmt.Println("hello world")
}
